--- a/package.json
+++ b/package.json
@@ -63,7 +63,10 @@
       "plugin:vue/essential",
       "eslint:recommended"
     ],
-    "rules": {},
+    "rules": {
+      "no-debugger": 0,
+      "no-console": 0
+    },
     "parserOptions": {
       "parser": "babel-eslint"
     }
